fix: uid_min: use it in audit auid checks, in jinja macro
First run this until it does not find more:

git grep -Pl 'auid(?:>|&gt;)=1000\b' linux_os/ shared/macros/ shared/templates/ | xargs -r \
    sed --follow-symlinks -Ezi 's/(\{\{[^}]*"[^}"]*auid>=|\{\{[^}]*"[^}"]*auid&gt;=)1000\b/\1" ~ uid_min ~ "/g;'

--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands_kmod/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands_kmod/rule.yml
@@ -1,5 +1,5 @@
 {{%- if product in ["ol7", "rhel7", "rhel8", "rhel9"] %}}
-    {{%- set kmod_audit="-a always,exit -F path=/usr/bin/kmod -F perm=x -F auid>=1000 -F auid!=unset -F key=privileged" %}}
+    {{%- set kmod_audit="-a always,exit -F path=/usr/bin/kmod -F perm=x -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=privileged" %}}
 {{%- elif product in ["ubuntu2004", "ubuntu2204"] %}}
     {{%- set kmod_audit="-w /bin/kmod -p x -k modules" %}}
 {{%- else %}}
