--- a/linux_os/guide/system/auditing/policy_rules/audit_access_failed_ppc64le/rule.yml
+++ b/linux_os/guide/system/auditing/policy_rules/audit_access_failed_ppc64le/rule.yml
@@ -6,8 +6,8 @@ title: 'Configure auditing of unsuccessful file accesses (ppc64le)'
 
 {{% set file_contents_audit_access_failed =
 "## Unsuccessful file access (any other opens) This has to go last.
--a always,exit -F arch=b64 -S open,openat,openat2,open_by_handle_at -F exit=-EACCES -F auid>=1000 -F auid!=unset -F key=unsuccessful-access
--a always,exit -F arch=b64 -S open,openat,openat2,open_by_handle_at -F exit=-EPERM -F auid>=1000 -F auid!=unset -F key=unsuccessful-access" %}}
+-a always,exit -F arch=b64 -S open,openat,openat2,open_by_handle_at -F exit=-EACCES -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=unsuccessful-access
+-a always,exit -F arch=b64 -S open,openat,openat2,open_by_handle_at -F exit=-EPERM -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=unsuccessful-access" %}}
 
 description: |-
     Ensure that unsuccessful attempts to access a file are audited.
