--- a/linux_os/guide/system/auditing/policy_rules/audit_access_success_aarch64/rule.yml
+++ b/linux_os/guide/system/auditing/policy_rules/audit_access_success_aarch64/rule.yml
@@ -7,8 +7,8 @@ title: 'Configure auditing of successful file accesses (AArch64)'
 {{% set file_contents_audit_access_success =
 "## Successful file access (any other opens) This has to go last.
 ## These next two are likely to result in a whole lot of events
--a always,exit -F arch=b32 -S open,openat,openat2,open_by_handle_at -F success=1 -F auid>=1000 -F auid!=unset -F key=successful-access
--a always,exit -F arch=b64 -S openat,openat2,open_by_handle_at -F success=1 -F auid>=1000 -F auid!=unset -F key=successful-access" %}}
+-a always,exit -F arch=b32 -S open,openat,openat2,open_by_handle_at -F success=1 -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=successful-access
+-a always,exit -F arch=b64 -S openat,openat2,open_by_handle_at -F success=1 -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=successful-access" %}}
 
 description: |-
     Ensure that successful attempts to access a file are audited.
