--- a/linux_os/guide/system/auditing/policy_rules/audit_create_success_ppc64le/rule.yml
+++ b/linux_os/guide/system/auditing/policy_rules/audit_create_success_ppc64le/rule.yml
@@ -6,9 +6,9 @@ title: 'Configure auditing of successful file creations (ppc64le)'
 
 {{% set file_contents_audit_create_success =
 "## Successful file creation (open with O_CREAT)
--a always,exit -F arch=b64 -S openat,open_by_handle_at -F a2&amp;0100 -F success=1 -F auid>=1000 -F auid!=unset -F key=successful-create
--a always,exit -F arch=b64 -S open -F a1&amp;0100 -F success=1 -F auid>=1000 -F auid!=unset -F key=successful-create
--a always,exit -F arch=b64 -S creat -F success=1 -F auid>=1000 -F auid!=unset -F key=successful-create" %}}
+-a always,exit -F arch=b64 -S openat,open_by_handle_at -F a2&amp;0100 -F success=1 -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=successful-create
+-a always,exit -F arch=b64 -S open -F a1&amp;0100 -F success=1 -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=successful-create
+-a always,exit -F arch=b64 -S creat -F success=1 -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=successful-create" %}}
 
 description: |-
     Ensure that successful attempts to create a file are audited.
