--- a/linux_os/guide/system/auditing/policy_rules/audit_delete_success_ppc64le/rule.yml
+++ b/linux_os/guide/system/auditing/policy_rules/audit_delete_success_ppc64le/rule.yml
@@ -6,7 +6,7 @@ title: 'Configure auditing of successful file deletions (ppc64le)'
 
 {{% set file_contents_audit_delete_success =
 "## Successful file delete
--a always,exit -F arch=b64 -S unlink,unlinkat,rename,renameat -F success=1 -F auid>=1000 -F auid!=unset -F key=successful-delete" %}}
+-a always,exit -F arch=b64 -S unlink,unlinkat,rename,renameat -F success=1 -F auid>=" ~ uid_min ~ " -F auid!=unset -F key=successful-delete" %}}
 
 description: |-
     Ensure that successful attempts to delete a file are audited.
